--- a/docs/_includes/css/ku-faculty-classes.html
+++ b/docs/_includes/css/ku-faculty-classes.html
@@ -4,17 +4,14 @@
   <div class="bs-example" data-example-id="ku-faculty-colors">
     For example, <code>&lt;body theme-science&gt;</code> will by default produce link colors, branding, etc. relative to the faculty of Science.
     <p>Possible classes are: </p>
+    <ol>
+      <li><code>&lt;body&gt;</code> (no class) Default KU styling</li>
+      <li><code>&lt;body theme-samf&gt;</code> Faculty of Social Sciences</li>
+      <li><code>&lt;body theme-sund&gt;</code> Faculty of Health Sciences</li>
+      <li><code>&lt;body theme-science&gt;</code> Faculty of Science</li>
+      <li><code>&lt;body theme-jura&gt;</code> Faculty of Law</li>
+      <li><code>&lt;body theme-teol&gt;</code> Faculty of Theology</li>
+      <li><code>&lt;body theme-hum&gt;</code> Faculty of Humanities</li>
+  </ol>
   </div>
-  {% highlight html %}
-  <ul>
-    <li>None: Default KU styling</li>
-    <li>theme-samf: Faculty of Social Sciences</li>
-    <li>theme-sund: Faculty of Health Sciences</li>
-    <li>theme-science: Faculty of Science</li>
-    <li>theme-jura: Faculty of Law</li>
-    <li>theme-teol: Faculty of Theology</li>
-    <li>theme-hum: Faculty of Humanities</li>
-  </ul>
-</div>
-{% endhighlight %}
 </div>
