--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -1973,7 +1973,7 @@
   </div>
   <div class="col-xs-4">
     <label for="input-@hr-border">@hr-border</label>
-    <input class="form-control" id="input-@hr-border" type="text" aria-describedby="help-block-@hr-border" value="@gray-lighter" data-var="@hr-border"/>
+    <input class="form-control" id="input-@hr-border" type="text" aria-describedby="help-block-@hr-border" value="@gray" data-var="@hr-border"/>
     <p class="help-block" id="help-block-@hr-border">Horizontal line color.</p>
   </div>
 </div>
