--- a/docs/_includes/nav/css.html
+++ b/docs/_includes/nav/css.html
@@ -27,7 +27,7 @@
   </ul>
 </li>
 <li>
-  <a href="#ku-faculty-colors">KU faculty styling</a>
+  <a href="#ku-faculty-colors">KU faculty colors</a>
 </li>
 <li>
   <a href="#type">Typography</a>
