--- a/less/variables.less
+++ b/less/variables.less
@@ -17,7 +17,7 @@
 @white-color:             #fff;
 
 // KU specific colors
- 
+
 @ku-red:                #901a1e;
 @hum:                   #365aa5;
 @science:               #46743c;
@@ -912,4 +912,4 @@
 //** Point at which .dl-horizontal becomes horizontal
 @dl-horizontal-breakpoint:    @grid-float-breakpoint;
 //** Horizontal line color.
-@hr-border:                   @gray-lighter;
+@hr-border:                   @gray;
