--- a/less/mixins/grid.less
+++ b/less/mixins/grid.less
@@ -4,8 +4,8 @@
 
 // Centered container element
 .container-fixed(@gutter: @grid-gutter-width) {
-  margin-right: auto;
-  margin-left: auto;
+  // margin-right: auto;
+  // margin-left: auto;
   padding-left: @grid-gutter-width;
   padding-right: @grid-gutter-width;
   // padding-left:  floor((@gutter / 2));
