--- a/docs/_includes/getting-started/examples.html
+++ b/docs/_includes/getting-started/examples.html
@@ -8,11 +8,21 @@
   <h2 id="examples-framework">Using the framework</h2>
   <div class="row bs-examples">
     <div class="col-xs-6 col-md-4">
-      <a class="thumbnail" href="../examples/ku-theme/">
+      <a class="thumbnail" href="../examples/ku-default/">
         <img src="../examples/screenshots/ku_standard.png" alt="KU template with left menu">
       </a>
       <h3>KU standard template</h3>
       <p>Template with left menu.</p>
+    </div>
+
+    <div class="clearfix visible-xs"></div>
+
+    <div class="col-xs-6 col-md-4">
+      <a class="thumbnail" href="../examples/ku-right-sidebar/">
+        <img src="../examples/screenshots/ku_standard_right_sidebar.png" alt="KU template with left menu">
+      </a>
+      <h3>KU standard template</h3>
+      <p>Template with left menu and right sidebar.</p>
     </div>
     <div class="clearfix visible-xs"></div>
 
