--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -2,97 +2,97 @@
 ================================================== -->
 <footer>
   <div class="container-fluid globalfooter">
-      <div class="footercontent clearfix">
-              <div class="footercolumn">
-                  <h3 data-heading="toggle" class="footer-heading hidden-xs">Københavns Universitet</h3>
-                  <h3 data-heading="toggle" class="footer-heading visible-xs-block">Organisation</h3>
-                  <ul class="footerlinks">
-                      <li><a href="http://velkommen.ku.dk/organisation/ledelse">Ledelse</a></li>
-                      <li><a href="http://velkommen.ku.dk/organisation/administration">Administration</a></li>
-                      <li><a href="http://velkommen.ku.dk/organisation/fakulteter">Fakulteter</a></li>
-                      <li><a href="http://velkommen.ku.dk/organisation/institutter">Institutter</a></li>
-                      <li><a href="http://forskning.ku.dk/centre">Forskningscentre</a></li>
-                      <li><a href="http://vetschool.ku.dk/om/VetOmDyrehospitaler">Dyrehospitaler</a></li>
-                      <li><a href="http://odont.ku.dk/for_patienter">Tandlægeskolen</a></li>
-                      <li><a href="http://kubis.ku.dk">Biblioteker</a></li>
-                      <li><a href="http://velkommen.ku.dk/besoeg/museer">Museer</a></li>
-                  </ul>
-              </div>
-              <div class="footercolumn">
-                  <h3 data-heading="toggle" class="footer-heading">Kontakt</h3>
-                  <ul class="footerlinks">
-                      <li><a href="http://findvej.ku.dk">Find vej</a></li>
-                      <li><a href="http://ku.dk/vejviser">Find en medarbejder</a></li>
-                      <li><a href="http://velkommen.ku.dk/kontakt">Kontakt KU</a></li>
-                  </ul>
-                  <h3 data-heading="toggle" class="footer-heading">Services</h3>
-                  <ul class="footerlinks">
-                      <li><a href="http://nyheder.ku.dk/presseservice">Presseservice</a></li>
-                      <li><a href="http://designguide.ku.dk">Designguide</a></li>
-                      <li><a href="http://ku-shop.dk">Merchandise</a></li>
-                      <li><a href="http://it.ku.dk/kontakt/support_KU">IT-support</a></li>
-                      <li><a href="http://oko.ku.dk">CVR, EAN og bankoplysninger</a></li>
-                  </ul>
-              </div>
-              <div class="footercolumn">
-                  <h3 data-heading="toggle" class="footer-heading">For studerende og ansatte</h3>
-                  <ul class="footerlinks">
-                      <li><a class="padlock" href="http://intranet.ku.dk">KUnet</a></li>
-                  </ul>
-                  <h3 data-heading="toggle" class="footer-heading">Job og karriere</h3>
-                  <ul class="footerlinks">
-                      <li><a href="http://jobportal.ku.dk">Jobportalen</a></li>
-                      <li><a href="http://mangfoldighed.ku.dk">Mangfoldighed</a></li>
-                      <li><a href="http://alumni.ku.dk">Alumne</a></li>
-                  </ul>
-                  <h3 data-heading="toggle" class="footer-heading">Nødsituationer</h3>
-                  <ul class="footerlinks">
-                      <li><a href="http://akut.ku.dk">KU's sikkerhedsberedskab</a></li>
-                  </ul>
-              </div>
-              <div class="footercolumn">
-                  <h3 data-heading="toggle" class="footer-heading">Web</h3>
-                  <ul class="footerlinks">
-                      <li><a href="http://velkommen.ku.dk/om-webstedet">Om websitet</a></li>
-                      <li><a href="http://velkommen.ku.dk/om-webstedet/cookie-og-privatlivspolitik">Cookies og privatlivspolitik</a></li>
-                      <li><a href="http://informationssikkerhed.ku.dk">Informationssikkerhed</a></li>
-                      <li><a href="http://velkommen.ku.dk/indeks">A-Å-indeks</a></li>
-                  </ul>
-                  <div class="social-items">
-                      <h3 data-heading="open" class="footer-heading">Mød KU på</h3>
-                      <div class="social-item">
-                          <a target="_blank" href="https://www.facebook.com/universitet" class="social-icon facebook" title="Facebook"></a>
-                      </div>
-                      <div class="social-item">
-                          <a target="_blank" href="https://www.linkedin.com/edu/k%C3%B8benhavns-universitet-12012" class="social-icon linkedin" title="LinkedIn"></a>
-                      </div>
-                      <div class="social-item">
-                          <a target="_blank" href="http://velkommen.ku.dk/apps" class="social-icon app" title="KU Apps"></a>
-                      </div>
-                      <div class="social-item">
-                          <a target="_blank" href="http://nyheder.ku.dk/rss/" class="social-icon rss" title="RSS"></a>
-                      </div>
-                      <div class="social-item">
-                          <a target="_blank" href="https://twitter.com/koebenhavns_uni" class="social-icon twitter" title="Twitter"></a>
-                      </div>
-                      <div class="social-item">
-                          <a target="_blank" href="https://www.youtube.com/user/CopenhagenUniversity" class="social-icon youtube" title="YouTube"></a>
-                      </div>
-                      <div class="social-item">
-                          <a target="_blank" href="http://www.futurity.org/university/university-of-copenhagen" class="social-icon futurity" title="futurity"></a>
-                      </div>
-                      <div class="social-item">
-                          <a target="_blank" href="http://theconversation.com/institutions/university-of-copenhagen" class="social-icon the_conversation" title="The Conversation"></a>
-                      </div>
-                      <div class="social-item">
-                          <a target="_blank" href="https://www.coursera.org/ucph" class="social-icon coursera" title="Coursera"></a>
-                      </div>
-                      <div class="social-item">
-                          <a target="_blank" href="http://video.ku.dk" class="social-icon ku_video" title="KU Videoportal"></a>
-                      </div>
-                  </div>
-              </div>
+    <div class="footercontent clearfix">
+      <div class="footercolumn">
+        <h3 data-heading="toggle" class="footer-heading hidden-xs">Københavns Universitet</h3>
+        <h3 data-heading="toggle" class="footer-heading visible-xs-block">Organisation</h3>
+        <ul class="footerlinks">
+          <li><a href="http://velkommen.ku.dk/organisation/ledelse">Ledelse</a></li>
+          <li><a href="http://velkommen.ku.dk/organisation/administration">Administration</a></li>
+          <li><a href="http://velkommen.ku.dk/organisation/fakulteter">Fakulteter</a></li>
+          <li><a href="http://velkommen.ku.dk/organisation/institutter">Institutter</a></li>
+          <li><a href="http://forskning.ku.dk/centre">Forskningscentre</a></li>
+          <li><a href="http://vetschool.ku.dk/om/VetOmDyrehospitaler">Dyrehospitaler</a></li>
+          <li><a href="http://odont.ku.dk/for_patienter">Tandlægeskolen</a></li>
+          <li><a href="http://kubis.ku.dk">Biblioteker</a></li>
+          <li><a href="http://velkommen.ku.dk/besoeg/museer">Museer</a></li>
+        </ul>
+      </div>
+      <div class="footercolumn">
+        <h3 data-heading="toggle" class="footer-heading">Kontakt</h3>
+        <ul class="footerlinks">
+          <li><a href="http://findvej.ku.dk">Find vej</a></li>
+          <li><a href="http://ku.dk/vejviser">Find en medarbejder</a></li>
+          <li><a href="http://velkommen.ku.dk/kontakt">Kontakt KU</a></li>
+        </ul>
+        <h3 data-heading="toggle" class="footer-heading">Services</h3>
+        <ul class="footerlinks">
+          <li><a href="http://nyheder.ku.dk/presseservice">Presseservice</a></li>
+          <li><a href="http://designguide.ku.dk">Designguide</a></li>
+          <li><a href="http://ku-shop.dk">Merchandise</a></li>
+          <li><a href="http://it.ku.dk/kontakt/support_KU">IT-support</a></li>
+          <li><a href="http://oko.ku.dk">CVR, EAN og bankoplysninger</a></li>
+        </ul>
+      </div>
+      <div class="footercolumn">
+        <h3 data-heading="toggle" class="footer-heading">For studerende og ansatte</h3>
+        <ul class="footerlinks">
+          <li><a class="padlock" href="http://intranet.ku.dk">KUnet</a></li>
+        </ul>
+        <h3 data-heading="toggle" class="footer-heading">Job og karriere</h3>
+        <ul class="footerlinks">
+          <li><a href="http://jobportal.ku.dk">Jobportalen</a></li>
+          <li><a href="http://mangfoldighed.ku.dk">Mangfoldighed</a></li>
+          <li><a href="http://alumni.ku.dk">Alumne</a></li>
+        </ul>
+        <h3 data-heading="toggle" class="footer-heading">Nødsituationer</h3>
+        <ul class="footerlinks">
+          <li><a href="http://akut.ku.dk">KU's sikkerhedsberedskab</a></li>
+        </ul>
+      </div>
+      <div class="footercolumn">
+        <h3 data-heading="toggle" class="footer-heading">Web</h3>
+        <ul class="footerlinks">
+          <li><a href="http://velkommen.ku.dk/om-webstedet">Om websitet</a></li>
+          <li><a href="http://velkommen.ku.dk/om-webstedet/cookie-og-privatlivspolitik">Cookies og privatlivspolitik</a></li>
+          <li><a href="http://informationssikkerhed.ku.dk">Informationssikkerhed</a></li>
+          <li><a href="http://velkommen.ku.dk/indeks">A-Å-indeks</a></li>
+        </ul>
+        <div class="social-items">
+          <h3 data-heading="open" class="footer-heading">Mød KU på</h3>
+          <div class="social-item">
+            <a target="_blank" href="https://www.facebook.com/universitet" class="social-icon facebook" title="Facebook"></a>
           </div>
+          <div class="social-item">
+            <a target="_blank" href="https://www.linkedin.com/edu/k%C3%B8benhavns-universitet-12012" class="social-icon linkedin" title="LinkedIn"></a>
+          </div>
+          <div class="social-item">
+            <a target="_blank" href="http://velkommen.ku.dk/apps" class="social-icon app" title="KU Apps"></a>
+          </div>
+          <div class="social-item">
+            <a target="_blank" href="http://nyheder.ku.dk/rss/" class="social-icon rss" title="RSS"></a>
+          </div>
+          <div class="social-item">
+            <a target="_blank" href="https://twitter.com/koebenhavns_uni" class="social-icon twitter" title="Twitter"></a>
+          </div>
+          <div class="social-item">
+            <a target="_blank" href="https://www.youtube.com/user/CopenhagenUniversity" class="social-icon youtube" title="YouTube"></a>
+          </div>
+          <div class="social-item">
+            <a target="_blank" href="http://www.futurity.org/university/university-of-copenhagen" class="social-icon futurity" title="futurity"></a>
+          </div>
+          <div class="social-item">
+            <a target="_blank" href="http://theconversation.com/institutions/university-of-copenhagen" class="social-icon the_conversation" title="The Conversation"></a>
+          </div>
+          <div class="social-item">
+            <a target="_blank" href="https://www.coursera.org/ucph" class="social-icon coursera" title="Coursera"></a>
+          </div>
+          <div class="social-item">
+            <a target="_blank" href="http://video.ku.dk" class="social-icon ku_video" title="KU Videoportal"></a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </footer>
 
@@ -100,36 +100,35 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="../assets/js/vendor/jquery.min.js"><\/script>')</script>
+<script>
+  window.jQuery || document.write('<script src="../assets/js/vendor/jquery.min.js"><\/script>')
+</script>
 
 {% if site.github %}
-  <script src="../dist/js/bootstrap.min.js"></script>
+<script src="../dist/js/bootstrap.min.js"></script>
 {% elsif page.slug == 'examples' %}
-  <script src="../../dist/js/bootstrap.min.js"></script>
+<script src="../../dist/js/bootstrap.min.js"></script>
 {% else %}
-  <script src="../dist/js/bootstrap.js"></script>
-{% endif %}
-
+<script src="../dist/js/bootstrap.js"></script>
+{% endif %} {% if site.github %}
+<script src="../assets/js/docs.min.js"></script>
+{% elsif page.slug == 'examples' %}
+<script src="../../assets/js/customize.min.js"></script>
+{% else %} {% for file in site.data.configBridge.paths.docsJs %}
+<script src="{{ file }}"></script>
+{% endfor %} {% endif %} {% if page.slug == "customize" %}
+<script>
+  var __configBridge = {
+    {
+      site.data.configBridge.config | jsonify
+    }
+  }
+</script>
 {% if site.github %}
-  <script src="../assets/js/docs.min.js"></script>
-{% elsif page.slug == 'examples' %}
-  <script src="../../assets/js/customize.min.js"></script>
-{% else %}
-  {% for file in site.data.configBridge.paths.docsJs %}
-  <script src="{{ file }}"></script>
-  {% endfor %}
-{% endif %}
-
-{% if page.slug == "customize" %}
-  <script>var __configBridge = {{ site.data.configBridge.config | jsonify }}</script>
-  {% if site.github %}
-    <script src="../assets/js/customize.min.js"></script>
-  {% else %}
-    {% for file in site.data.configBridge.paths.customizerJs %}
-    <script src="{{ file }}"></script>
-    {% endfor %}
-  {% endif %}
-{% endif %}
+<script src="../assets/js/customize.min.js"></script>
+{% else %} {% for file in site.data.configBridge.paths.customizerJs %}
+<script src="{{ file }}"></script>
+{% endfor %} {% endif %} {% endif %}
 
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 {% if page.slug == 'examples' %}
@@ -137,3 +136,4 @@
 {% else %}
 <script src="../assets/js/ie10-viewport-bug-workaround.js"></script>
 {% endif %}
+<script src="../../assets/js/ku-offcanvas.js"></script>
