--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -11,7 +11,7 @@
     {{ page.title }} &middot; Bootstrap
   {% endif %}
 </title>
-
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&subset=latin-ext" rel="stylesheet">
 <!-- Bootstrap core CSS -->
 {% if site.github %}
 <link href="../dist/css/bootstrap.min.css" rel="stylesheet">
