--- a/less/variables.less
+++ b/less/variables.less
@@ -67,7 +67,7 @@
 @font-name-base:          "notosans-regular-webfont";
 //** Element ID within SVG icon file.
 @font-name-svg-id:        "noto_sans_regular";
-@font-family-sans-serif:  "noto sans regular", Helvetica, Arial, sans-serif;
+@font-family-sans-serif:  "Open Sans", "noto sans regular", Helvetica, Arial, sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
@@ -116,6 +116,8 @@
 //== Components
 //
 //## Define common padding and border radius sizes and more. Values based on 14px text and 1.428 line-height (~20px to start).
+@padding10: 10px;
+@margin10: 10px;
 @padding20: 20px;
 @margin20: 20px;
 
@@ -390,7 +392,7 @@
 //##
 
 // Basics of a navbar
-@ku-topbar-height:                 25px;
+@ku-topbar-height:                 30px;
 @navbar-height:                    40px;
 @navbar-margin-bottom:             @line-height-computed;
 @navbar-border-radius:             @border-radius-base;
