--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -15,7 +15,7 @@
 </div>
 <ul class="nav">
   <li><a href="#">Forside</a></li>
-  <li><a href="#" class="hasSubs">Sub menu here</a>
+  <li><a href="#">Sub menu here</a>
     <ul>
       <li><a href="#">Link 2.1</a></li>
       <li><a href="#">Link 2.2</a></li>
@@ -23,13 +23,13 @@
     </ul>
   </li>
   <li><a href="#">Separated link</a>
-    <li><a href="#" class="hasSubs">Separated link</a>
+    <li><a href="#">Separated link</a>
       <ul>
-        <li><a href="#" class="hasSubs">Link 2.1</a>
+        <li><a href="#">Link 2.1</a>
           <ul>
             <li><a href="#">Link 3.1</a></li>
             <li><a href="#">Link 3.2</a></li>
-            <li><a href="#" class="hasSubs">Link 3.3</a>
+            <li><a href="#">Link 3.3</a>
               <ul>
                 <li class="active"><a href="#">Link 4.1 - one more very, very, very, long text</a></li>
                 <li><a href="#">Link 4.2</a></li>
@@ -44,9 +44,9 @@
     <li><a href="#">One more separated link</a></li>
 </ul>
 <hr class="menu-seperator">
-  <ul class="nav">
-    <li><a href="#">Action</a></li>
-    <li><a href="#">Separated link</a></li>
-    <li><a href="#">One more separated link</a></li>
-  </ul>
+<ul class="nav">
+  <li><a href="#">Action</a></li>
+  <li><a href="#">Separated link</a></li>
+  <li><a href="#">One more separated link</a></li>
+</ul>
 </div>
