--- a/less/grid.less
+++ b/less/grid.less
@@ -7,6 +7,9 @@
 .container {
   .container-fixed();
   @media (min-width: @screen-sm-min) {
+    width: 100%;
+  }
+  @media (min-width: @screen-sm-min) {
     width: @container-sm;
   }
   @media (min-width: @screen-md-min) {
@@ -14,8 +17,8 @@
   }
   @media (min-width: @screen-lg-min) {
     width: @container-lg;
-    margin: 0 auto;
   }
+  margin: 0 auto;
 }
 main {
   flex: 1 0 auto;
