--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -22,11 +22,11 @@
   </div>
   <div class="col-xs-4">
     <label for="input-@gray-light">@gray-light</label>
-    <input class="form-control" id="input-@gray-light" type="text" value="lighten(@gray-base, 46.7%)" data-var="@gray-light"/>
+    <input class="form-control" id="input-@gray-light" type="text" value="#777" data-var="@gray-light"/>
   </div>
   <div class="col-xs-4">
     <label for="input-@gray-lighter">@gray-lighter</label>
-    <input class="form-control" id="input-@gray-lighter" type="text" value="lighten(@gray-base, 93.5%)" data-var="@gray-lighter"/>
+    <input class="form-control" id="input-@gray-lighter" type="text" value="#f8f8f8" data-var="@gray-lighter"/>
   </div>
   <div class="clearfix"></div>
   <div class="col-xs-4">
