--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -40,6 +40,8 @@
 <link href="../assets/css/src/pygments-manni.css" rel="stylesheet">
 <link href="../assets/css/src/docs.css" rel="stylesheet">
 {% endif %}
+<!-- Mobile menu - mmenu -->
+<link rel="stylesheet" href="../../assets/css/mmenu/jquery.mmenu.css">
 <!--[if lt IE 9]><script src="../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 {% if page.slug == 'examples' %}
 <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
