--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -1,19 +1,11 @@
 <!-- Left menu
 ================================================== -->
-<!-- Toggle left menu button -->
-<div class="visible-xs-block hidden-md hidden-lg leftmenu-toggle">
-  <button type="button" class="navbar-toggle offcanvas-toggle" data-toggle="offcanvas" data-target=".navmenu">
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-    <span class="sr-only">Toggle navigation</span>
-  </button>
-</div>
+
 <div class="navmenu navmenu-default navmenu-fixed-left offcanvas-sm">
 <div class="ku-navbar-header">
   Kommunikation
 </div>
-<ul class="nav">
+<ul id="leftmenu" class="nav">
   <li><a href="#">Forside</a></li>
   <li><a href="#">Sub menu here</a>
     <ul>
@@ -44,7 +36,7 @@
     <li><a href="#">One more separated link</a></li>
 </ul>
 <hr class="menu-seperator">
-<ul class="nav">
+<ul id="leftmenu_2" class="nav">
   <li><a href="#">Action</a></li>
   <li><a href="#">Separated link</a></li>
   <li><a href="#">One more separated link</a></li>
