--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -4,6 +4,22 @@
       <!-- <a class="topbar-logo pull-left" href="/">
           <img class="img-responsive" src="../../images/ku_topbar_dk.svg" alt="Københavns universitet">
       </a> -->
+      <!-- Toggle left menu button -->
+
+        <a id="btn_left" href="#mobileleftmenu" class="navbar-toggle leftmenu-toggle" role="button">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="sr-only">Toggle navigation</span>
+        </a>
+
+        <a id="btn_right" href="#navbar" class="navbar-toggle collapsed globalmenu-toggle" role="button" data-toggle="collapse" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar top-bar"></span>
+          <span class="icon-bar middle-bar"></span>
+          <span class="icon-bar bottom-bar"></span>
+      </a>
+
       <div id="topbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#">Kalender</a></li>
@@ -20,14 +36,6 @@
 </header>
 <nav class="navbar navbar-default navbar-static-top ku-nav">
   <div class="container">
-    <div class="navbar-header" role="navigation">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li class="dropdown">
