--- a/docs/_layouts/examples.html
+++ b/docs/_layouts/examples.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
   <head>
     <!-- Meta, title, CSS, favicons, etc. -->
     {% include header.html %}
@@ -8,7 +8,7 @@
     <a id="skippy" class="sr-only sr-only-focusable" href="#content"><div class="container"><span class="skiplink-text">Skip to main content</span></div></a>
     <!-- Ku top navigation -->
     {% include nav/ku-nav.html %}
-    
+
     <!-- Page content of course! -->
     {{ content }}
 
