--- a/less/variables.less
+++ b/less/variables.less
@@ -11,8 +11,8 @@
 @gray-darker:            lighten(@gray-base, 13.5%); // #222
 @gray-dark:              #252525;
 @gray:                   #ccc;
-@gray-light:             lighten(@gray-base, 46.7%); // #777
-@gray-lighter:           lighten(@gray-base, 93.5%); // #eee
+@gray-light:             #777;
+@gray-lighter:           #f8f8f8;
 
 @white-color:             #fff;
 
