--- a/less/grid.less
+++ b/less/grid.less
@@ -6,7 +6,7 @@
 // Set the container width, and override it for fixed navbars in media queries.
 .container {
   .container-fixed();
-  @media (min-width: @screen-sm-min) {
+  @media (max-width: @screen-sm-min) {
     width: 100%;
   }
   @media (min-width: @screen-sm-min) {
