--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -3,60 +3,60 @@
 <!-- Footer -->
 <footer>
   <div class="container-fluid globalfooter">
-    <div class="footercontent clearfix">
+    <div class="footercontent clearfix" role="menubar">
       <div class="footercolumn">
         <h3 data-heading="toggle" class="footer-heading hidden-xs">Københavns Universitet</h3>
         <h3 data-heading="toggle" class="footer-heading visible-xs-block">Organisation</h3>
-        <ul class="footerlinks">
-          <li><a href="http://velkommen.ku.dk/organisation/ledelse">Ledelse</a></li>
-          <li><a href="http://velkommen.ku.dk/organisation/administration">Administration</a></li>
-          <li><a href="http://velkommen.ku.dk/organisation/fakulteter">Fakulteter</a></li>
-          <li><a href="http://velkommen.ku.dk/organisation/institutter">Institutter</a></li>
-          <li><a href="http://forskning.ku.dk/centre">Forskningscentre</a></li>
-          <li><a href="http://vetschool.ku.dk/om/VetOmDyrehospitaler">Dyrehospitaler</a></li>
-          <li><a href="http://odont.ku.dk/for_patienter">Tandlægeskolen</a></li>
-          <li><a href="http://kubis.ku.dk">Biblioteker</a></li>
-          <li><a href="http://velkommen.ku.dk/besoeg/museer">Museer</a></li>
+        <ul class="footerlinks" role="menu">
+          <li role="menuitem"><a href="http://velkommen.ku.dk/organisation/ledelse">Ledelse</a></li>
+          <li role="menuitem"><a href="http://velkommen.ku.dk/organisation/administration">Administration</a></li>
+          <li role="menuitem"><a href="http://velkommen.ku.dk/organisation/fakulteter">Fakulteter</a></li>
+          <li role="menuitem"><a href="http://velkommen.ku.dk/organisation/institutter">Institutter</a></li>
+          <li role="menuitem"><a href="http://forskning.ku.dk/centre">Forskningscentre</a></li>
+          <li role="menuitem"><a href="http://vetschool.ku.dk/om/VetOmDyrehospitaler">Dyrehospitaler</a></li>
+          <li role="menuitem"><a href="http://odont.ku.dk/for_patienter">Tandlægeskolen</a></li>
+          <li role="menuitem"><a href="http://kubis.ku.dk">Biblioteker</a></li>
+          <li role="menuitem"><a href="http://velkommen.ku.dk/besoeg/museer">Museer</a></li>
         </ul>
       </div>
       <div class="footercolumn">
         <h3 data-heading="toggle" class="footer-heading">Kontakt</h3>
-        <ul class="footerlinks">
-          <li><a href="http://findvej.ku.dk">Find vej</a></li>
-          <li><a href="http://ku.dk/vejviser">Find en medarbejder</a></li>
-          <li><a href="http://velkommen.ku.dk/kontakt">Kontakt KU</a></li>
+        <ul class="footerlinks" role="menu">
+          <li role="menuitem"><a href="http://findvej.ku.dk">Find vej</a></li>
+          <li role="menuitem"><a href="http://ku.dk/vejviser">Find en medarbejder</a></li>
+          <li role="menuitem"><a href="http://velkommen.ku.dk/kontakt">Kontakt KU</a></li>
         </ul>
         <h3 data-heading="toggle" class="footer-heading">Services</h3>
-        <ul class="footerlinks">
-          <li><a href="http://nyheder.ku.dk/presseservice">Presseservice</a></li>
-          <li><a href="http://designguide.ku.dk">Designguide</a></li>
-          <li><a href="http://ku-shop.dk">Merchandise</a></li>
-          <li><a href="http://it.ku.dk/kontakt/support_KU">IT-support</a></li>
-          <li><a href="http://oko.ku.dk">CVR, EAN og bankoplysninger</a></li>
+        <ul class="footerlinks" role="menu">
+          <li role="menuitem"><a href="http://nyheder.ku.dk/presseservice">Presseservice</a></li>
+          <li role="menuitem"><a href="http://designguide.ku.dk">Designguide</a></li>
+          <li role="menuitem"><a href="http://ku-shop.dk">Merchandise</a></li>
+          <li role="menuitem"><a href="http://it.ku.dk/kontakt/support_KU">IT-support</a></li>
+          <li role="menuitem"><a href="http://oko.ku.dk">CVR, EAN og bankoplysninger</a></li>
         </ul>
       </div>
       <div class="footercolumn">
         <h3 data-heading="toggle" class="footer-heading">For studerende og ansatte</h3>
-        <ul class="footerlinks">
-          <li><a class="padlock" href="http://intranet.ku.dk">KUnet</a></li>
+        <ul class="footerlinks" role="menu">
+          <li role="menuitem"><a class="padlock" href="http://intranet.ku.dk">KUnet</a></li>
         </ul>
         <h3 data-heading="toggle" class="footer-heading">Job og karriere</h3>
-        <ul class="footerlinks">
-          <li><a href="http://jobportal.ku.dk">Jobportalen</a></li>
-          <li><a href="http://mangfoldighed.ku.dk">Mangfoldighed</a></li>
-          <li><a href="http://alumni.ku.dk">Alumne</a></li>
+        <ul class="footerlinks" role="menu">
+          <li role="menuitem"><a href="http://jobportal.ku.dk">Jobportalen</a></li>
+          <li role="menuitem"><a href="http://mangfoldighed.ku.dk">Mangfoldighed</a></li>
+          <li role="menuitem"><a href="http://alumni.ku.dk">Alumne</a></li>
         </ul>
         <h3 data-heading="toggle" class="footer-heading">Nødsituationer</h3>
         <ul class="footerlinks">
-          <li><a href="http://akut.ku.dk">KU's sikkerhedsberedskab</a></li>
+          <li role="menuitem"><a href="http://akut.ku.dk">KU's sikkerhedsberedskab</a></li>
         </ul>
       </div>
       <div class="footercolumn">
         <h3 data-heading="toggle" class="footer-heading">Web</h3>
-        <ul class="footerlinks">
-          <li><a href="http://velkommen.ku.dk/om-webstedet">Om websitet</a></li>
-          <li><a href="http://velkommen.ku.dk/om-webstedet/cookie-og-privatlivspolitik">Cookies og privatlivspolitik</a></li>
-          <li><a href="http://informationssikkerhed.ku.dk">Informationssikkerhed</a></li>
+        <ul class="footerlinks" role="menu">
+          <li role="menuitem"><a href="http://velkommen.ku.dk/om-webstedet">Om websitet</a></li>
+          <li role="menuitem"><a href="http://velkommen.ku.dk/om-webstedet/cookie-og-privatlivspolitik">Cookies og privatlivspolitik</a></li>
+          <li role="menuitem"><a href="http://informationssikkerhed.ku.dk">Informationssikkerhed</a></li>
           <li><a href="http://velkommen.ku.dk/indeks">A-Å-indeks</a></li>
         </ul>
         <div class="social-items">
@@ -138,75 +138,44 @@
 <script src="../assets/js/ie10-viewport-bug-workaround.js"></script>
 {% endif %}
 
-
+<!-- Mobile menu -->
 <script type="text/javascript" src="../../assets/js/mmenu/jquery.mmenu.all.min.js"></script>
 <script type="text/javascript">
-  //	The menu on the left
   $(function() {
+    // The menu on the left
     var $leftmenu = $('#leftmenu');
     var $leftmenu2 = $('#leftmenu_2');
     var $mobimenu = $('#mobileleftmenu');
+    var $items;
+    var $items2;
 
     if ($leftmenu) {
-      var $items = $leftmenu.clone();
+      $items = $leftmenu.clone();
     }
     if ($leftmenu2) {
-      var $items2 = $leftmenu2.clone().prepend('<li class="mm-divider">&nbsp;</li>');
+      $items2 = $leftmenu2.clone().prepend('<li class="mm-divider">&nbsp;</li>');
     }
     var $menuitems = $items.append($items2);
     $mobimenu.append($menuitems);
 
     $mobimenu.mmenu({
-      'offCanvas': {
+      offCanvas: {
         position: 'left',
-        zposition: "front"
+        zposition: 'front'
       },
-      "navbars": [{
-        "position": 'top',
-        "content": [
+      navbars: [{
+        position: 'top',
+        content: [
           '<a href="http://www.ku.dk">Ku.dk</a>'
         ]
       }],
       extensions: ['multiline'],
       slidingSubmenus: false,
       currentItem: {
-        find: true,
+        find: true
       },
       onClick: {
         setSelected: true
-      }
-    });
-    var $cachedWidth = $('body').prop('clientWidth');
-    if ($cachedWidth < 769) {
-      // Global menu folding
-      $('#navbar').on('show.bs.collapse', function() {
-        $('.ku-nav').show();
-      });
-      $('#navbar').on('hide.bs.collapse', function() {
-        $('.ku-nav').hide();
-      })
-
-      // Clicking left menu button closes global menu
-      $('#btn_left').click(function() {
-        $('#navbar').collapse('hide');
-      });
-
-      // Close global menu on click on links
-      $(document).on('click', '.navbar-collapse.in', function(e) {
-        if ($(e.target).is('a') && $(e.target).attr('class') != 'dropdown-toggle') {
-          $(this).collapse('hide');
-        }
-      });
-    }
-    $(window).resize(function() {
-      var $newWidth = $('body').prop('clientWidth');
-      if ($newWidth !== $cachedWidth) {
-        if ($newWidth > 750) {
-          $('.ku-nav').show();
-        } else {
-          $('.ku-nav').hide();
-        }
-        $cachedWidth = $newWidth;
       }
     });
   });
