--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -34,7 +34,7 @@
     </div>
   </div>
 </header>
-<nav class="navbar navbar-default navbar-static-top ku-nav">
+<nav id="kunav" class="navbar navbar-default navbar-static-top ku-nav">
   <div class="container">
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
