--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -9,6 +9,10 @@
     float: left;
     position: relative;
     bottom: -5px;
+    @media (max-width: @screen-sm-min) {
+        width: 50px;
+        bottom: -20px;
+    }
   }
   .ku-branding-text {
     max-height: @ku-branding-box-height;
