--- a/less/navbar.less
+++ b/less/navbar.less
@@ -54,10 +54,10 @@
               content: '\e114';
             }
             ul li a:hover {
-                background-color: @gray-lighter;
+                background-color: #f2f2f2;
             }
             > a {
-                background-color: @gray-lighter; // Open dropdown item
+                background-color: #f2f2f2; // Open dropdown item
             }
           }
         }
