--- a/less/navs.less
+++ b/less/navs.less
@@ -87,6 +87,7 @@
 @media (max-width: @screen-sm-min) {
   .ku-nav {
     display: none;
+    background-color: @gray-lighter!important;
   }
 }
 // Tabs
