--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -13,6 +13,6 @@
     <!-- Page content of course! -->
     {{ content }}
 
-    {% include footer.html %}
+    {% include global-footer.html %}
   </body>
 </html>
