--- a/less/grid.less
+++ b/less/grid.less
@@ -42,6 +42,7 @@ main {
 .main-content {
   padding-top: @grid-gutter-width;
   padding-bottom: @grid-gutter-width;
+  flex-grow: 1;
 }
 // Make columns equal height
 @media (min-width: @screen-md-min) {
