--- a/docs/_layouts/examples.html
+++ b/docs/_layouts/examples.html
@@ -12,6 +12,6 @@
     <!-- Page content of course! -->
     {{ content }}
 
-    {% include footer.html %}
+    {% include global-footer.html %}
   </body>
 </html>
